--- a/app/views/layouts/books.html.erb
+++ b/app/views/layouts/books.html.erb
@@ -12,6 +12,6 @@
 <p style="color: green"><%= flash[:notice] %></p>
 
 	<%= yield %>
-	<%= javascript_include_tag :defaults, "jquery.form" %>
+	<%= javascript_include_tag :defaults, "cookies", "jquery.form" %>
 </body>
 </html>
