--- a/app/views/books/search.html.erb
+++ b/app/views/books/search.html.erb
@@ -4,33 +4,7 @@
 </div>
 <br style="clear:both" />
 <div id="search-holder">
-	<form action="/books/search" method="GET" id="search-form">
-		<p>
-			<label for="title">Title </label><input name="title" />
-		</p>
-	
-		<p>
-			<label for="genre">Genre</label>
-			<select name="genre_id">
-				<option>---</option>
-				<% @genres.each do |g| %>
-					<option value="<%= g.id %>"><%= g.name %></option>
-				<% end %>
-			</select>
-		</p>
-
-
-		<p>
-			<label for="author">Author</label>
-			<select name="genre_id">
-				<option>---</option>
-				<% @authors.each do |a| %>
-					<option value="<%= a.id %>"><%= a.name %></option>
-				<% end %>
-			</select>
-		</p>
-		<input type="submit" value="Search" /><br />
-	</form>
+	<%= render :partial => "search_form", :object => BookSearch.new %>
 </div>
 
 <div id="results">
