--- a/app/views/books/_search_form.html.erb
+++ b/app/views/books/_search_form.html.erb
@@ -6,12 +6,16 @@
 
 	<p>
     <%= f.label :genre_id %><br />
-    <%= f.select :genre_id, Genre.find(:all,:order => "name").collect {|a| [ a.name, a.id ] } %>
+    <%= f.select :genre_id, 
+								  Genre.find(:all,:order => "name").collect {|a| [ a.name, a.id ] },
+								  :include_blank => "--Select--" %>
 	</p>
 
 	<p>
     <%= f.label :author_id %><br />
-    <%= f.select :author_id, Author.find(:all,:order => "name").collect {|a| [ a.name, a.id ] } %>
+    <%= f.select :author_id, 
+								 Author.find(:all,:order => "name").collect {|a| [ a.name, a.id ] },
+		  					 :include_blank => "--Select--" %>
 	</p>
 	<input type="submit" value="Search" /><br />
 <% end %>
